--- a/boot/zephyr/boards/nrf52840_pca10059.conf
+++ b/boot/zephyr/boards/nrf52840_pca10059.conf
@@ -16,13 +16,16 @@ CONFIG_BOOT_SERIAL_CDC_ACM=y
 CONFIG_BOOT_SERIAL_DETECT_PORT="GPIO_1"
 CONFIG_BOOT_SERIAL_DETECT_PIN=6
 
+# RTT console
+CONFIG_RTT_CONSOLE=n
+CONFIG_USB_UART_CONSOLE=n
+CONFIG_UART_CONSOLE=y
+
 # Required by USB
-CONFIG_MULTITHREADING=y
+CONFIG_MULTITHREADING=n
 
 # USB
-CONFIG_USB=y
-CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB=n
+CONFIG_USB_DEVICE_STACK=n
 CONFIG_USB_DEVICE_PRODUCT="MCUBOOT"
 CONFIG_USB_CDC_ACM=y
-CONFIG_USB_COMPOSITE_DEVICE=n
-CONFIG_USB_MASS_STORAGE=n
