boot: zephyr: Modify default console configuration
Default configuration console for mcuboot is UART.Optional console
is Segger RTT.

Signed-off-by: Marcio Montenegro <msam@cesar.org.br>

--- a/boot/zephyr/boards/nrf52840_pca10056.conf
+++ b/boot/zephyr/boards/nrf52840_pca10056.conf
@@ -11,14 +11,16 @@ CONFIG_BOOT_SERIAL_CDC_ACM=n
 #CONFIG_BOOT_SERIAL_DETECT_PORT="GPIO_1"
 #CONFIG_BOOT_SERIAL_DETECT_PIN=6
 
-# no RTT console
-#CONFIG_RTT_CONSOLE=n
-#CONFIG_USB_UART_CONSOLE=n
-#CONFIG_UART_CONSOLE=y
+# UART console
+CONFIG_RTT_CONSOLE=n
+CONFIG_USB_UART_CONSOLE=n
+CONFIG_UART_CONSOLE=y
+
 # RTT console
-CONFIG_HAS_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=n
+#CONFIG_HAS_SEGGER_RTT=y
+#CONFIG_RTT_CONSOLE=y
+#CONFIG_UART_CONSOLE=n
+
 # Required by USB
 CONFIG_MULTITHREADING=n
 
