boot: zehpyr: Add storage functions
The storage area is shared with knot app

Signed-off-by: Marcio Montenegro <msam@cesar.org.br>

--- a/boot/zephyr/CMakeLists.txt
+++ b/boot/zephyr/CMakeLists.txt
@@ -85,6 +85,7 @@ target_sources(app PRIVATE main.c)
 target_sources(app PRIVATE flash_map_extended.c)
 target_sources(app PRIVATE os.c)
 target_sources(app PRIVATE keys.c)
+target_sources(app PRIVATE storage.c)
 if(NOT DEFINED CONFIG_FLASH_PAGE_LAYOUT)
   target_sources(app PRIVATE flash_map_legacy.c)
 endif()
