boot: zephyr: Add DTS_SOURCE CMake variable
The DTS_SOURCE variable changes the default location of dts file

Signed-off-by: Marcio Montenegro <msam@cesar.org.br>

--- a/boot/zephyr/CMakeLists.txt
+++ b/boot/zephyr/CMakeLists.txt
@@ -41,6 +41,11 @@ if (EXISTS ${CMAKE_CURRENT_LIST_DIR}/boards/${BOARD}.overlay)
       "${DTC_OVERLAY_FILE} ${CMAKE_CURRENT_LIST_DIR}/boards/${BOARD}.overlay")
 endif()
 
+if (EXISTS ${CMAKE_CURRENT_LIST_DIR}/boards/${BOARD}.dts)
+  set(DTS_SOURCE
+      "${CMAKE_CURRENT_LIST_DIR}/boards/${BOARD}.dts")
+endif()
+
 # Enable Zephyr runner options which request mass erase if so
 # configured.
 #
