--- a/boot/zephyr/prj.conf
+++ b/boot/zephyr/prj.conf
@@ -3,6 +3,13 @@ CONFIG_DEBUG=y
 CONFIG_SYSTEM_CLOCK_DISABLE=y
 CONFIG_SYS_POWER_MANAGEMENT=n
 
+### Logging
+CONFIG_LOG=y
+CONFIG_SYS_LOG=n
+CONFIG_PRINTK=y
+CONFIG_BOOT_BANNER=y
+CONFIG_BOOT_HAVE_LOGGING=y
+
 CONFIG_MAIN_STACK_SIZE=10240
 CONFIG_MBEDTLS_CFG_FILE="mcuboot-mbedtls-cfg.h"
 
