boot: zephyr: Move storage files to bootutil folder
Move NVS storage functions to mcuboot bootutil folder

Signed-off-by: Marcio Montenegro <msam@cesar.org.br>

--- a/boot/zephyr/CMakeLists.txt
+++ b/boot/zephyr/CMakeLists.txt
@@ -85,7 +85,6 @@ target_sources(app PRIVATE main.c)
 target_sources(app PRIVATE flash_map_extended.c)
 target_sources(app PRIVATE os.c)
 target_sources(app PRIVATE keys.c)
-target_sources(app PRIVATE storage.c)
 if(NOT DEFINED CONFIG_FLASH_PAGE_LAYOUT)
   target_sources(app PRIVATE flash_map_legacy.c)
 endif()
@@ -99,6 +98,7 @@ target_sources(app PRIVATE "${BOOT_DIR}/bootutil/src/encrypted.c")
 target_sources(app PRIVATE "${BOOT_DIR}/bootutil/src/image_rsa.c")
 target_sources(app PRIVATE "${BOOT_DIR}/bootutil/src/image_ec256.c")
 target_sources(app PRIVATE "${BOOT_DIR}/bootutil/src/caps.c")
+target_sources(app PRIVATE "${BOOT_DIR}/bootutil/src/storage.c")
 
 if(CONFIG_BOOT_SIGNATURE_TYPE_ECDSA_P256)
   # When using ECDSA signatures, pull in our copy of the tinycrypt library.
