boot: zephyr: Change default boot signature to ECDSA-256
Original mcuboot use RSA 2048 key

Signed-off-by: Marcio Montenegro <msam@cesar.org.br>

--- a/boot/zephyr/prj.conf
+++ b/boot/zephyr/prj.conf
@@ -17,16 +17,16 @@ CONFIG_BOOT_ENCRYPT_RSA=n
 
 CONFIG_BOOT_BOOTSTRAP=n
 
-### Default to RSA
-CONFIG_BOOT_SIGNATURE_TYPE_RSA=y
-CONFIG_BOOT_SIGNATURE_TYPE_ECDSA_P256=n
+### Default to ECDSA
+CONFIG_BOOT_SIGNATURE_TYPE_RSA=n
+CONFIG_BOOT_SIGNATURE_TYPE_ECDSA_P256=y
 
 ### The bootloader generates its own signature verification based on a
 ### key file which needs to be provided and needs to match the selected signing
 ### algorithm (CONFIG_BOOT_SIGNATURE_TYPE_).
 ### The PEM files below are provided as examples.
-CONFIG_BOOT_SIGNATURE_KEY_FILE="root-rsa-2048.pem"
-#CONFIG_BOOT_SIGNATURE_KEY_FILE="root-ec-p256.pem"
+#CONFIG_BOOT_SIGNATURE_KEY_FILE="root-rsa-2048.pem"
+CONFIG_BOOT_SIGNATURE_KEY_FILE="root-ec-p256.pem"
 
 ### mbedTLS has its own heap
 # CONFIG_HEAP_MEM_POOL_SIZE is not set
