--- a/boot/zephyr/prj.conf
+++ b/boot/zephyr/prj.conf
@@ -4,8 +4,8 @@ CONFIG_SYSTEM_CLOCK_DISABLE=y
 CONFIG_SYS_POWER_MANAGEMENT=n
 
 ### Logging
-CONFIG_LOG=y
-CONFIG_SYS_LOG=n
+CONFIG_LOG=n
+CONFIG_SYS_LOG=y
 CONFIG_PRINTK=y
 CONFIG_BOOT_BANNER=y
 CONFIG_BOOT_HAVE_LOGGING=y
